--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/StarterContent/Maps/BasicEmpty.BasicEmpty
 
 
 EditorStartupMap=/Game/StarterContent/Maps/BasicEmpty.BasicEmpty
+GameInstanceClass=/Game/Yang_BP/MyGameListener.MyGameListener_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
