--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,3 +18,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/MorphProject")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MorphProjectGameModeBase")
 
+[/Script/PlayFabCommon.PlayFabRuntimeSettings]
+TitleId=A6C83
+
